@@ -14,6 +14,7 @@
     * Add Net::SSLeay#get_certificate method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#set_flags method.
     * Add Net::SSLeay::EVP_PKEY class.
+    * Add Net::SSLeay::EVP_PKEY#DESTROY method.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
